          TODO: Restoration of sustain upon play seems broken for a while - try putEvent instead of addScheduledEvent
           in Audio::startRolling().
        - Cleaned some namespace change artifacts. Fixed signal/slot mechanism related to bigtime, pianoroll,
          drumedit (Orcan)
08.09.2011:
        - Finished namespace MusEWidget. Added namespaces MusEUtil, MusEDialog. (Orcan)
07.09.2011:
        - Introducing namespaces. So far, we have MusEApp, MusEGlobal, MusEConfig, and I just started
          MusEWidget. zynaddsubfx does not crash anymore. (Orcan)
06.09.2011:
        - Add licensing information (GPLv2 or later) to source code files. Update FSF mailing address
          to the most recent one in the existing copyright notices. (Orcan)
05.09.2011:
        - Remodel the EffectRack. There is still an ongoing issue with the minimumSizeHint, which I worked
          around by adding a fixed offset. (Orcan)
        - Fall back to using Meter's own size functions rather than the event rectangle's size functions
	  in paintEvent(). The latter caused corruption when toggling mono/stereo. (Orcan)
04.09.2011:
        - Remodel the Slider (Orcan)
01.09.2011:
        - Fixed tough old skeleton: Selecting 'previous/next event' in Song::execAutomationCtlPopup now moves cursor
           with exact frame resolution, all the way through via proper song->setPos > audio->msgSeek rather than
           song->setPos > set pos[0] etc. There was a bug that it got stuck on too-close points on the graphs. (Tim) 
        - Reverted controls to full speed (again): Removed too-cautious msgSetVolume, msgSetPan, msgSetPluginCtrlVal. (Tim)
          Reviewing some other possibly unneeded too-cautious msgXXX audio messages :) 
          TODO: Fix current automation values (the 'off' value).
        - Removed unused PanKnob from mixer CMakeLists. (Tim)
29.08.2011:
        - Fixed audio automation graph editing. And now 'snaps' to discrete integer or bool types. (Tim p4.0.32)